troubleshooting layout issues

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -45,7 +45,7 @@
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
     font-size: 30px;
-    width: 300px;
+    width: 250px;
     text-align: center;
     border-radius: 5px;
     box-shadow: 10px 10px 5px grey;
@@ -57,7 +57,7 @@
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 20px;
     font-size: 30px;
-    width: 300px;
+    width: 250px;
     text-align: center;
     border-radius: 5px;
     box-shadow: 10px 10px 5px grey;
@@ -76,7 +76,7 @@
     grid-template-columns: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
     grid-gap: 2px;
     background-color:orange;
-    height: 100px
+    height: 100px;
     margin-left: auto;
     margin-right: auto;
 }
